# noorinalabs-user-service

./: .cspell.json  .dockerignore  .env.example  .gitattributes  .gitignore  .lychee.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: annunaki_log.py  validate_commit_identity.py
.claude/lib/: check_dockerfile_base_pin.py  pre_commit_ci_sync.py
.claude/lib/tests/: test_check_dockerfile_base_pin.py  test_pre_commit_ci_sync.py
.claude/team/: charter.md  roster.json
.claude/team/roster/: engineer_mateo.md  security_engineer_idris.md
.cspell/: project-words.txt
.github/: dependabot.yml
.github/branch-protection/: SPEC.md  apply-ruleset.sh  ruleset-main.json
.github/workflows/: ci.yml  docs.yml  ghcr-publish.yml  structural-ontology.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0003_add_session_last_active.py  0010_verification_tokens_indexes.py  0020_add_subscription_trial_constraint.py  0030_add_totp_secrets.py  0040_merge_multi_heads.py  0041_add_subscriptions_user_id_index.py  0042_add_users_preferences.py  0043_add_audit_log.py  MIGRATION_RANGES.md
audit/: parser_fixture_coverage.md
docs/: adr-001-jwt-library.md  openapi-snapshot.json  schema.md
ontology/structural/: code-graph.json  llms.txt
scripts/: bootstrap_admin.py  bootstrap_test_user.py  generate_openapi_snapshot.py  migrate_users.py  pre-commit.sh  structural_ontology.py
src/app/: config.py  database.py  dependencies.py  main.py
src/app/middleware/: cors.py  security.py
src/app/models/: __init__.py  audit_log.py  oauth_account.py  role.py  session.py  subscription.py  totp_secret.py  user.py  verification_token.py
src/app/routers/: audit.py  auth.py  health.py  roles.py  sessions.py  subscriptions.py  totp.py  users.py  verification.py  well_known.py
src/app/schemas/: audit.py  auth.py  profile.py  session.py  subscription.py  totp.py  user.py  verification.py
src/app/services/: audit.py  keys.py  oauth.py  rate_limit.py  rbac.py  session.py  subscription.py  token.py  totp.py  user.py  verification.py
src/app/utils/: crypto.py
tests/: conftest.py  test_audit.py  test_auth_endpoints.py  test_bootstrap_admin.py  test_bootstrap_test_user.py  test_config_connection_urls.py  test_config_post_login_url.py  test_database_lifecycle.py  test_docs_gated.py  test_email_auth_endpoints.py  test_health.py  test_metrics.py  test_migrate_users.py  test_oauth_account_linking_guard.py  test_oauth_account_linking_guard_pg.py  test_oauth_callback.py  test_oauth_callback_get.py  test_oauth_provider_base_url_override.py  test_oauth_providers.py  test_profile_endpoints.py  test_rate_limit.py  test_rbac.py  test_session_service.py  test_sessions_api.py  test_sso_forward_auth.py  test_subscriptions.py  test_token_service.py  test_totp.py  test_users_crud.py  test_verification.py
